crates/keron-lang/tests/corpus/errors/check/map_list_key.keron
val m: Map<List<Int>, Int> = {}
